--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </li>
         <li>Nathan Selikoff</li>
         <li>Brian Gates</li>
+        <li><a href='instructors/hitesh.html'>Hitesh Choudhary</a></li>
       </ul>
     </section>
     <section>
@@ -31,6 +32,7 @@
         <li>JaNiece</li>
         <li>Jones</li>
         <li>Richard</li>
+        <li>Vivek</li>
       </ul>
     </section>
   </main>
